OpenGL Render animation wrong in sequencer with scenes with different resolutions #47848

Closed
opened 2016-03-19 22:43:39 +01:00 by Jefferson Rausseo · 8 comments

System Information
Linux Manjaro 15.12 64Bits
Nvidia 8600 GT

Blender Version
Blender 2.77 RC2 official and Blender 7f03e7c compile for me.

Short description of error
If use many scenes with differents resolutions in cameras the OpenGL render animation is wrong.

Exact steps for others to reproduce the error

  1. Add 3 scenes in a new file (add a camera in every scenes).
  2. In every scenes, in properties, change resolution to 1920x1080 - 100%.
  3. Add a new scene. In this new scene, change resolution to 1920x1080 - 50%
  4. To go to screen layout "Video editor".
  5. Add the 3 first scenes to the strip editor in the sequencer.
  6. Try "OpenGL Render Animation" in the sequencer.
    sequencer.png
  7. Not correct OpenGL render Animation, but is correct in OpenGL render image.
    screen.png
    error in render.blend
**System Information** Linux Manjaro 15.12 64Bits Nvidia 8600 GT **Blender Version** Blender 2.77 RC2 official and Blender 7f03e7c compile for me. **Short description of error** If use many scenes with differents resolutions in cameras the OpenGL render animation is wrong. **Exact steps for others to reproduce the error** 1. Add 3 scenes in a new file (add a camera in every scenes). 2. In every scenes, in properties, change resolution to 1920x1080 - 100%. 3. Add a new scene. In this new scene, change resolution to 1920x1080 - 50% 4. To go to screen layout "Video editor". 5. Add the 3 first scenes to the strip editor in the sequencer. 6. Try "OpenGL Render Animation" in the sequencer. ![sequencer.png](https://archive.blender.org/developer/F297356/sequencer.png) 7. Not correct OpenGL render Animation, but is correct in OpenGL render image. ![screen.png](https://archive.blender.org/developer/F297354/screen.png) [error in render.blend](https://archive.blender.org/developer/F297358/error_in_render.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @jefrau

Added subscriber: @jefrau

#47985 was marked as duplicate of this issue

#47985 was marked as duplicate of this issue

#47864 was marked as duplicate of this issue

#47864 was marked as duplicate of this issue

This issue was referenced by f4840e878b

This issue was referenced by f4840e878b95e87d60a8b66fad9a5777ce380dc5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @karab44

Added subscriber: @karab44

Added subscriber: @SachaGoedegebure

Added subscriber: @SachaGoedegebure
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47848
No description provided.